# ProjectPython-OOP_Vacancy_Parser

./: .gitignore  README.md  pyproject.toml  run.py  vacancies_all.json
src/: headhunter.py  job_JSON_file.py  superjob.py  trudvsem.py  vacancies.py  zarplata.py
src/abc/: abc_vacancy_api.py  abc_vacancy_file.py
src/utils/: desk.py  reading_parser.py  run_user_interface.py
